Add SquashMatch add and create API. Some rework of UserRole structure to make more and better use of (now renamed to) Role Enum.
Small frontend changes to fix admin link appearing and login look.

Still requires:
 way to update matches in front end and corresponding call.
 division as part of match creation.

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -108,6 +108,13 @@ h1 {
     color: #2c3e50;
 }
 
+h2 {
+    text-align: center;
+    margin: 32px 0 16px 0;
+    font-size: 1.6rem;
+    color: #2c3e50;
+}
+
 .email-mailto {
     display: inline;
 }
